2005-12-14  Atsushi Enomoto <atsushi@ximian.com>

	* XPathNavigator.cs : Added MonoTODO to CreateAttributes(). Removed
	  MonoTODO from ReadSubtree().

2005-12-14  Atsushi Enomoto <atsushi@ximian.com>

	* XPathNavigator.cs : UnderlyingObject returns null by default.

2005-12-13  Atsushi Enomoto <atsushi@ximian.com>

	* XPathNavigator.cs : Reimplemented MoveToFollowing() to avoid
	  inefficient MoveToDescendant() and to match .NET 2.0 behavior.

2005-12-13  Atsushi Enomoto <atsushi@ximian.com>

	* XPathNavigator.cs : ReplaceSelf() should allow document fragment.
	  Moved implementation to XPathEditableDocument.

2005-12-13  Atsushi Enomoto <atsushi@ximian.com>

	* XPathNavigator.cs : PrependChild() should use AppendChild() when
	  there is no child.

2005-12-13  Atsushi Enomoto <atsushi@ximian.com>

	* XPathNavigator.cs : InsertAfter() should raise an error before
	  MoveToNext() when current node is either attribute or namespace.

2005-12-13  Atsushi Enomoto <atsushi@ximian.com>

	* XPathNavigator.cs : InsertAfter() should append children after it
	  once moved to parent. This method shoulr raise an error when it is
	  placed on Root.

2005-12-13  Atsushi Enomoto <atsushi@ximian.com>

	* XPathNavigator.cs : (CreateFragmentReader) return XmlReader that
	  considers current namespace contexts.

2005-12-12  Atsushi Enomoto <atsushi@ximian.com>

	* XPathNavigator.cs : removed some MonoTODOs.

2005-12-08  Atsushi Enomoto <atsushi@ximian.com>

	* XPathDocument.cs : garbage cleanup.

2005-11-23  Vladimir Krasnov  <vladimirk@mainsoft.com>

	* Iterator.cs: fixed UnionIterator.SetCurrent method, the
	navigators may be from different xml files.

2005-11-23  Vladimir Krasnov  <vladimirk@mainsoft.com>

	* Iterator.cs: fixed SimpleSlashIterator.MoveNextCore method, the
	navigators may be from different xml files.

2005-11-10  Atsushi Enomoto <atsushi@ximian.com>

	* XPathNavigator.cs, XPathNodeIterator.cs :
	  [DebuggerDisplay] are not worthy of existing.
