@@ -1,5 +1,11 @@
 2006-01-06  Atsushi Enomoto <atsushi@ximian.com>
 
+	* XmlWriter.cs : In WriteNode(XPathNavigator, bool), Avoid
+	  ReadSubtree() for non-element content since they are not allowed
+	  in ReadSubtree() (but allowed here).
+
+2006-01-06  Atsushi Enomoto <atsushi@ximian.com>
+
 	* XmlValidatingReader.cs : In ReadTypedValue(), treat Whitespace
 	  nodes as target string nodes as well as other text nodes.
 
