@@ -1,5 +1,10 @@
 2006-01-06  Atsushi Enomoto  <atsushi@ximian.com>
 
+	* XmlWriterTests.cs : added tests for WriteNode(XPathNavigator, bool)
+	  as well as XPathNavigator.WriteSubtree(XmlWriter).
+
+2006-01-06  Atsushi Enomoto  <atsushi@ximian.com>
+
 	* XsdValidatingReaderTests.cs : test for ReadTypeValue() that it
 	  does not ignore whitespace nodes, and it does not normalize string
 	  incorrectly.
